# TC-MOB-02 | Login fallido — credenciales inválidas
appId: com.saucelabs.mydemoapp.android
---
- launchApp:
    clearState: true

- assertVisible:
    text: "Login"

- tapOn:
    id: "nameET"
- clearText
- inputText: "hacker@fake.com"

- tapOn:
    id: "passwordET"
- clearText
- inputText: "wrongpassword"

- tapOn:
    id: "loginBtn"

- waitForAnimationToEnd

- assertNotVisible:
    text: "Products"

- assertVisible:
    text: "Provided credentials do not match any user in this service"

- takeScreenshot: "reports/mobile/tc-mob-02-login-invalid"
